filtres status & notifications (#186)
* affaire filter multiple status

* fix default filter

* notification affaires

* notification affaires openapi

* fix tests & add auth required
