# libs/openapi/src/spec.yml
@@ -39,31 +39,32 @@ paths:
       - in: query
         name: statut
         schema:
-          type: string
-          enum:
-          - A00
-          - D00
-          - E00
-          - EAA
-          - EAC
-          - ECA
-          - ECC
-          - ECH
-          - ED
-          - EHA
-          - EST
-          - G00
-          - INT
-          - P00
-          - S00
-          - SV0
-          - T00
+          type: array
+          items:
+            type: string
+            enum:
+            - A00
+            - D00
+            - E00
+            - EAA
+            - EAC
+            - ECA
+            - ECC
+            - ECH
+            - ED
+            - EHA
+            - EST
+            - G00
+            - INT
+            - P00
+            - S00
+            - SV0
+            - T00
         description: Statut de l'affaire
       tags:
       - Affaire
       security:
       - jwtAuth: []
-      - {}
       responses:
         '200':
           content:
@@ -86,7 +87,6 @@ paths:
       - Affaire
       security:
       - jwtAuth: []
-      - {}
       responses:
         '200':
           content:
@@ -119,7 +119,6 @@ paths:
               $ref: '#/components/schemas/AffaireDetailsRequest'
       security:
       - jwtAuth: []
-      - {}
       responses:
         '200':
           content:
@@ -152,7 +151,6 @@ paths:
               $ref: '#/components/schemas/PatchedAffaireDetailsRequest'
       security:
       - jwtAuth: []
-      - {}
       responses:
         '200':
           content:
@@ -175,7 +173,6 @@ paths:
       - Affaire
       security:
       - jwtAuth: []
-      - {}
       responses:
         '200':
           content:
@@ -211,7 +208,6 @@ paths:
       - Affaire
       security:
       - jwtAuth: []
-      - {}
       responses:
         '200':
           content:
@@ -234,7 +230,6 @@ paths:
       - Affaire
       security:
       - jwtAuth: []
-      - {}
       responses:
         '200':
           content:
@@ -1844,7 +1839,6 @@ paths:
       - Note
       security:
       - jwtAuth: []
-      - {}
       responses:
         '200':
           content:
@@ -2032,7 +2026,6 @@ paths:
       - Pointage
       security:
       - jwtAuth: []
-      - {}
       responses:
         '200':
           description: No response body
@@ -2068,7 +2061,6 @@ paths:
       - Pointage
       security:
       - jwtAuth: []
-      - {}
       responses:
         '200':
           content:
@@ -2438,6 +2430,9 @@ components:
         nombre_fiches:
           type: integer
           readOnly: true
+        nb_notifications:
+          type: integer
+          readOnly: true
       required:
       - avancement_affaire
       - couleur_affichage
@@ -2445,6 +2440,7 @@ components:
       - date_modification
       - en_retard
       - id
+      - nb_notifications
       - nombre_fiches
       - temps_ajustage
       - temps_machine
@@ -2528,9 +2524,13 @@ components:
           nullable: true
           title: Nom du chargé d'affaire
           maxLength: 2000
+        nb_notifications:
+          type: integer
+          readOnly: true
       required:
       - fiches
       - id
+      - nb_notifications
     AffaireFichesEtapes:
       type: object
       description: Serializer pour récupérer une affaire avec ses fiches et ses étapes
